--- a/home.html
+++ b/home.html
@@ -25,8 +25,8 @@
                 <br>
     
                 <div class="text-center">
-                    <a href="/table.html"><button type="button" class="btn btn-lg btn-primary"><i class="fa fa-rocket" aria-hidden="true"></i> View Tables</button></a>
-                    <a href="/reservations.html"><button type="button" class="btn btn-lg btn-danger"><i class="fa fa-credit-card" aria-hidden="true"></i> Make Reservation</button></a>
+                    <a href="/table"><button type="button" class="btn btn-lg btn-primary"><i class="fa fa-rocket" aria-hidden="true"></i> View Tables</button></a>
+                    <a href="/reservations"><button type="button" class="btn btn-lg btn-danger"><i class="fa fa-credit-card" aria-hidden="true"></i> Make Reservation</button></a>
                 </div>
     
             </div>
